fix: correções e melhorias para velocidade